# zfs_m1_mac

./: README.md
spl/: PKGBUILD-spl-modules.in  PKGBUILD-spl.in  configure.ac
spl/include/sys/: isa_defs.h  sysmacros.h
spl/module/spl/: spl-processor.c
spl/module/spl/KernelExports/: Makefile.am  allsymbols.txt  zfs.exports
zfs/: Makefile.am  PKGBUILD-zfs  PKGBUILD-zfs-modules  configure.ac
zfs/cmd/zfs/: mount_zfs
zfs/cmd/zfs_util/: zfs_util  zfs_util.c
zfs/config/: always-arch.m4
zfs/include/: zfs_fletcher.h
zfs/include/sys/: vdev_raidz_impl.h
zfs/lib/libicp/: Makefile.am
zfs/lib/libspl/: Makefile.am  getmntany.c
zfs/module/lua/setjmp/: setjmp_aarch64.S
zfs/module/zcommon/: zfs_fletcher.c
zfs/module/zfs/: Makefile.am  vdev_raidz_math.c  zfs_vnops.c
